--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Banco Comunitário",
   "main": "index.js",
   "scripts": {
+    "start": "node dist/index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -11,6 +12,8 @@
   "license": "ISC",
   "dependencies": {
     "@types/node": "^20.14.10",
+    "date-fns": "^3.6.0",
+    "dayjs": "^1.11.11",
     "ts-node": "^10.9.2",
     "typescript": "^5.5.3"
   }
