--- a/package.json
+++ b/package.json
@@ -13,8 +13,9 @@
   "dependencies": {
     "@types/node": "^20.14.10",
     "date-fns": "^3.6.0",
-    "dayjs": "^1.11.11",
-    "ts-node": "^10.9.2",
+    "ts-node": "^10.9.2"
+  },
+  "devDependencies": {
     "typescript": "^5.5.3"
   }
 }
