--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "@nestjs/mapped-types": "^2.0.5",
     "@nestjs/platform-express": "^10.0.0",
     "reflect-metadata": "^0.2.0",
-    "rxjs": "^7.8.1"
+    "rxjs": "^7.8.1",
+    "supertest": "^7.0.0"
   },
   "devDependencies": {
     "@nestjs/cli": "^10.0.0",
