--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   "start:debug": "nest start --debug --watch",
   "start:prod": "node dist/main",
   "typeorm": "ts-node  ./node_modules/typeorm/cli",
-  "migration:create": "npm run typeorm -- migration:create ./src/db/migrations/contapoupanca",
+  "migration:create": "npm run typeorm -- migration:create ./src/db/migrations/{name}",
   "migration:run": "npm run typeorm migration:run -- -d ./src/db/typeOrm.migrations-config.ts",
   "migration:revert": "npm run typeorm migration:revert -- -d ./src/db/typeOrm.migrations-config.ts",
   "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
